--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@ The MSI App Player, essentially a version of the BlueStacks Android app player, 
     <br>
     <h2>
         
-BlueStacks is an American technology company known for the BlueStacks App Player and other cloud-based cross-platform products. The BlueStacks App Player is designed to enable Android applications to run on PCs running Microsoft Windows and Apple's macOS.</h2>
+BlueStacks is an American technology company known for the BlueStacks App Player and other cloud-based cross-platform products. The BlueStacks App Player is designed to enable Android applications to run on PCs running Microsoft Windows and Apple's macOS.
+	The BlueStacks app player is the worlds most leading android emulator. It can handle around thousands of games and apps. Run you favroute games on the BlueStacks App Player. Click the below to download!</h2>
     <a href="https://cdn3.bluestacks.com/downloads/windows/nxt/5.2.110.1003/4b37f8a27d79ab796aef0455dcca9eb4/BlueStacksMicroInstaller_5.2.110.1003_native.exe?filename=BlueStacksInstaller_5.2.110.1003_native_ab7230efb78cade028191c411ddc6876_0.exe">Click To Download For Windows No virus!</a><br><br>
-    <a href="noavaliblebluestacks.html">Download For Mac</a>
+    <a href="https://cdn3.bluestacks.com/downloads/mac/bgp64_mac/4.270.1.2803/c610c2d26a70cad789a74e586a08e51f/x64/BlueStacksInstaller_4.270.1.2803.dmg?filename=BlueStacksInstaller_4.270.1.2803_5217f046111cf1905c3ea08c5df38c24.dmg">Download For Mac</a><br>
+	<a>There is only BlueStacks 4 avalible for mac.. will update this site when bluestacks 5 is avalible for mac.</a><br>
+	<a class="peaceop">;) P E A C E</a>
+	<h1 class="copyright"> © Copyright ZYROME / SARVAGNA 2021</h1>
 
 
 </body>
